<?xml version="1.0" encoding="utf-8"?>
<resources>

    <drawable name="clr_normal">#aaffffff</drawable>
    <drawable name="clr_pressed">#aaD4D4D4</drawable>
    <drawable name="photo_camera">#ffffff</drawable>
    <drawable name="camera_photo">#e6e6e6</drawable>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="app_name">乡村喜宴</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sunday_text">日</string>
    <string name="monday_text">一</string>
    <string name="tuesday_text">二</string>
    <string name="wednesday_text">三</string>
    <string name="thursday_text">四</string>
    <string name="friday_text">五</string>
    <string name="saturday_text">六</string>
    
    <string name="cancel">关闭</string>
    <string name="hunqing">婚庆</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="login_title">用户登陆</string>
    <string name="conn_failed">网络连接失败，请稍候再试！</string>
    <string name="conn_faileda">验证码有误！</string>
    <string name="mobile_success">账号注册成功</string>
    <string name="password_success">密码修改成功</string>
    <string name="login_mobile_hint">请输入手机号码</string>
    <string name="login_password">请输入密码</string>
    <string name="confirm_password">两次密码输入不同，请重新输入</string>
    <string name="login_btn_login">登陆成功</string>
    <string name="login_btn_register">注册</string>
    <string name="login_failed">用户名或密码错误，请重新输入</string>
    <string name="login_reservation">预定成功！</string>
    <string name="login_reservati_a">订单已确定，客服人员即将联系您！</string>
    <string name="register_title">账号注册</string>
    <string name="register_mobile_format_error">手机号码格式不正确，请重新输入</string>
    <string name="mobile_is_exist">该手机号码已经被注册</string>
    <string name="mobile_isnot_exist">该手机号码未注册</string>
    <string name="register_code_hind">请输入验证码</string>
    <string name="valid_input_error">验证码输入错误，请重新输入</string>
    <string name="valid_ILLEGAL_REQUEST">请求参数无效，请重新输入</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="zuo_time_out">操作超时，请重新输入</string>
    <string name="modification"><u>修改</u></string>
    <string name="title_activity_can_ju_">CanJu_Activity</string>
    <string name="title_activity_she_ying_shi__xq">SheYingShi_XQActivity</string>
    <string name="title_activity_she_xiang_shi__xq">SheXiangShi_XQActivity</string>
    <string name="title_activity_si_yi__xq">SiYi_XQActivity</string>
    <string name="title_activity_hua_zhuang_shi__xq">HuaZhuangShi_XQActivity</string>
    <string name="title_activity_chu_shi__ge_ren_xq">ChuShi_GeRenXQActivity</string>
    <string name="title_activity_chu_shi__tuan_dui_xq">ChuShi_TuanDuiXQActivity</string>
    <string name="title_activity_gen_xing">GenXingActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="watch_yulan">查看发送预览>></string>
    <string name="xinxi_call">称呼</string>
    <string name="xinxi_name">收帖人姓名</string>
    <string name="xinxi_tel">收帖人手机号</string>
    <string name="xinxi_mname">主人姓名</string>
    <string name="xinxi_locate">宴请地点</string>
    <string name="xinxi_time">宴请时间</string>
    <string name="xinxi_qingtiemode">请帖模板</string>
    <string name="xinxi_xinrenmname">新郎、新娘</string>
 <string name="title_activity_wo_de_qing_tie_all">WoDeQingTieAllActivity</string>
    <string name="title_activity_qing_dian__li_yi">QingDian_LiYiActivity</string>
    <string name="title_activity_shi_ren__ding_zhi">ShiRen_DingZhiActivity</string>
    <string name="title_activity_tao_can__lie_biao">TaoCan_LieBiaoActivity</string>
    <string name="title_activity_jia_meng">JiaMengActivity</string>
    <string name="title_activity_guan_yu_wo_men">GuanYuWoMenActivity</string>
    <string name="title_activity_jian_cha_geng_xin">JianChaGengXinActivity</string>
    <string name="title_activity_yi_jian_fan_kui">YiJianFanKuiActivity</string>
    <string name="title_activity_zhi_fu_bang_zhu">ZhiFuBangZhuActivity</string>
    <string name="title_activity_wo_de_ding_dan">WoDeDingDanActivity</string>
    <string name="title_activity_chu_shi_jia_ge_biao">ChuShiJiaGeBiaoActivity</string>
    <string name="title_activity_yu_ding_que_reng">YuDingQueRengActivity</string>
    <string name="title_activity_hun_che">HunCheActivity</string>
    <string name="title_activity_hun_che__gong_si_jian_jie">HunChe_GongSiJianJieActivity</string>
    <string name="title_activity_hun_che__tui_jian_che_dui">HunChe_TuiJianCheDuiActivity</string>
    <string name="title_activity_hun_che__hun_che_zhuang_shi">HunChe_HunCheZhuangShiActivity</string>
    <string name="title_activity_wo_de_qing_tie">WoDeQingTieActivity</string>
    <string name="title_activity_qing_tie_xin_xi">QingTieXinXiActivity</string>
    <string name="title_activity_qing_tie_preview">QingTieXinXiActivity</string>
    <string name="title_activity_qing_tie_previewshort">QingTieXinXiActivity</string>
    <string name="title_activity_wo_de_zhi_fu">WoDeZhiFuActivity</string>
    <string name="title_activity_ji_ben_xing_xi">JiBenXingXiActivity</string>

    <string name="title_activity_feast_tao_can">FeastSetTaocanActivity</string>
    <string name="title_activity_canju_item">CanjuItenActivity</string>
    <string name="title_activity_chushi_xinxi">ChushiXQActivity</string>
</resources>