<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="38.0dip"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:baselineAligned="false"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/btn_prev_month"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/left_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/triangle06_states"
                android:duplicateParentState="true"
                android:text=""
                android:textSize="16.0dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="21.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_next_month"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/right_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/triangle05_states"
                android:duplicateParentState="true"
                android:text=""
                android:textSize="16.0dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#fff" >

        <TextView
            style="@style/weekName"
            android:text="@string/sunday_text" />

        <TextView
            style="@style/weekName"
            android:text="@string/monday_text" />

        <TextView
            style="@style/weekName"
            android:text="@string/tuesday_text" />

        <TextView
            style="@style/weekName"
            android:text="@string/wednesday_text" />

        <TextView
            style="@style/weekName"
            android:text="@string/thursday_text" />

        <TextView
            style="@style/weekName"
            android:text="@string/friday_text" />

        <TextView
            style="@style/weekName"
            android:text="@string/saturday_text" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:clickable="true"
        android:clipChildren="true"
        android:columnWidth="46.0dip"
        android:gravity="center_horizontal"
        android:horizontalSpacing="3.0dip"
        android:listSelector="@null"
        android:numColumns="7"
        android:paddingBottom="1.0dip"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3.0dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/showcalendarcolor"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1.5"
            android:layout_gravity="left"
            android:layout_marginRight="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/yishen"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:gravity="left|center_vertical"
                android:text="已申请"
                android:textColor="#000" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_gravity="left"
                android:layout_weight="0.5"
                android:background="@drawable/yishen" />

            <TextView
                android:id="@+id/yizhan"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="已占用"
                android:textColor="#000" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_gravity="left"
                android:layout_weight="0.5"
                android:background="@drawable/yixuan" />
        </LinearLayout>

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1.5"
            android:background="@drawable/tab_selector_tv_hong"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>